samples/invalid_files/noLinkAnd.nts
# Admiral Business Machines 1954-2042
# One and gate

.chipsets:
input		a
input		b
output		s
and 		and

.links:
a:1		and:1
b:1		and:2
